--- a/boilerplate/enable/access_logs.conf
+++ b/boilerplate/enable/access_logs.conf
@@ -1,2 +1,6 @@
+# main_anon defined in logs/formats.conf
+# is_bot is defined in maps/is_bot.conf
+# is_human = !is_bot
+# if 后的条件成立时才会记录到指定的log文件
 access_log      /var/log/nginx/bots.access.log main_anon if=$is_bot;
 access_log      /var/log/nginx/access.log main_anon if=$is_human;
