--- a/boilerplate/limits/timeouts.conf
+++ b/boilerplate/limits/timeouts.conf
@@ -1,12 +1,22 @@
+# http://nginx.org/en/docs/http/ngx_http_core_module.html#keepalive_timeout
+# The first parameter sets a timeout during which a keep-alive client connection will stay open on the server side.
 keepalive_timeout           10;
+# Defines a timeout for reading client request header.
 client_header_timeout       10;
+# Defines a timeout for reading client request body.
 client_body_timeout         10;
+# Sets a timeout for transmitting a response to the client.
 send_timeout                10;
 
+# http://nginx.org/en/docs/http/ngx_http_fastcgi_module.html#fastcgi_connect_timeout
 fastcgi_connect_timeout     10;
 fastcgi_send_timeout        10;
 fastcgi_read_timeout        10;
 
+# http://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_connect_timeout
+# Defines a timeout for establishing a connection with a proxied server.
 proxy_connect_timeout       10;
+# Sets a timeout for transmitting a request to the proxied server.
 proxy_send_timeout          10;
+# Defines a timeout for reading a response from the proxied server.
 proxy_read_timeout          10;
