--- a/boilerplate/system/connections.conf
+++ b/boilerplate/system/connections.conf
@@ -1,2 +1,9 @@
+# http://nginx.org/en/docs/ngx_core_module.html#worker_connections
+# Sets the maximum number of simultaneous connections that can be opened by a worker process.
+
 worker_connections      8192;
+
+# http://nginx.org/en/docs/ngx_core_module.html#debug_connection
+# Enables debugging log for selected client connections.
+# Other connections will use logging level set by the error_log directive.
 #debug_connection        127.0.0.1;
