--- a/boilerplate/system/http.conf
+++ b/boilerplate/system/http.conf
@@ -1,9 +1,27 @@
+# http://nginx.org/en/docs/http/ngx_http_core_module.html
+
 default_type                text/html;
+
+# msie: Microsoft Internet Explorer
+# Enables or disables adding comments to responses for MSIE clients with status greater than 400 to increase the response size to 512 bytes.
 msie_padding                off;
+
+# http://nginx.org/en/docs/http/ngx_http_core_module.html#max_ranges
+# Limits the maximum allowed number of ranges in byte-range requests.
+# Range header的实例https://developer.mozilla.org/en-US/docs/Web/HTTP/Range_requests
 max_ranges                  0;
 charset                     utf-8;
 index                       index.html index.htm;
+
+# http://nginx.org/en/docs/http/ngx_http_core_module.html#reset_timedout_connection
+# Enables or disables resetting timed out connections.
+# This helps avoid keeping an already closed socket with filled buffers in a FIN_WAIT1 state for a long time.
 reset_timedout_connection   on;
+
+# Disables keep-alive connections with misbehaving browsers. such as: keepalive_disable msie6;
+# The value none enables keep-alive connections with all browsers.
 keepalive_disable           none;
 
+# Sets the maximum number of requests that can be served through one keep-alive connection.
+# After the maximum number of requests are made, the connection is closed.
 keepalive_requests          20;
