--- a/boilerplate/system/processes.conf
+++ b/boilerplate/system/processes.conf
@@ -1,2 +1,8 @@
+# auto 参数将生成CPU core数量一样的worker进程
+# master进程不占用core数量，因为master大多数时间处于睡眠态
 worker_processes        auto; #since 1.3.8 and 1.2.5
+
+# http://nginx.org/en/docs/ngx_core_module.html#worker_rlimit_nofile
+# Changes the limit on the maximum number of open files (RLIMIT_NOFILE) for worker processes.
+# Used to increase the limit without restarting the main process. 通过reload配置完成
 worker_rlimit_nofile    16384; #has to be bigger than worker_connections
