--- a/boilerplate/system/security.conf
+++ b/boilerplate/system/security.conf
@@ -1,4 +1,18 @@
+# Enables or disables emitting nginx version on error pages and in the “Server” response header field.
 server_tokens               off;
+
+# https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/X-Content-Type-Options
+# nosniff
+# Blocks a request if the requested type is
+#       "style" and the MIME type is not "text/css", or
+#       "script" and the MIME type is not a JavaScript MIME type.
 add_header                  X-Content-Type-Options nosniff;
+
+# https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/X-XSS-Protection
+# Enables XSS filtering. Rather than sanitizing the page,
+# the browser will prevent rendering of the page if an attack is detected.
 add_header                  X-XSS-Protection "1; mode=block";
+
+# https://developer.mozilla.org/en-US/docs/Web/HTTP/Headers/X-Frame-Options
+# The page can only be displayed in a frame on the same origin as the page itself.
 add_header                  X-Frame-Options SAMEORIGIN;
