--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,9 @@ http
     include     boilerplate/limits/open_files_cache.conf;
     include     boilerplate/limits/timeouts.conf;
 
+    # A media type (also MIME type and content type) is a two-part identifier
+    # for file formats and format contents transmitted on the Internet. 
+    # format: top-level type name / subtype name [ ; parameters ]
     include     boilerplate/system/mime_types.conf;
     include     boilerplate/system/http.conf;
     include     boilerplate/system/security.conf;
