--- a/servers/main.conf
+++ b/servers/main.conf
@@ -7,9 +7,17 @@
 # redirect to the single correct one https://localhost
 
 server {
+    # server_name 可以指定多个, 以空格分隔
+    # $hostname 内建变量 host name
     server_name             $hostname localhost;
     listen                  80;
     include                 boilerplate/disable/access_logs.conf;
+
+    # $host 内建变量，按顺序优先使用
+    # host name from the request line, or host name from the “Host” request header field, or the server name matching a request
+    # $request_uri full original request URI (with arguments)
+    #
+    # return 301 进行重定向
     return                  301 https://$host$request_uri;
 }
 
@@ -22,6 +30,10 @@ server
     include                 boilerplate/enable/ssl.conf;
     include                 boilerplate/disable/access_logs.conf;
 
+    # PCRE, https://perldoc.perl.org/perlre.html
+    # https://www.thegeekstuff.com/2017/05/nginx-location-examples/
+    # 这里的$host应该是www.localhost类似的，目标是去掉www
+    # ~*表示不区分大小写
     if ($host ~* ^www\.(?P<used_host>.*)$) {
         return 301 https://$used_host$request_uri;
     }
@@ -30,6 +42,8 @@ server
 server
 {
     server_name             $hostname localhost;
+    # The ssl parameter allows specifying that all connections accepted on this port should work in SSL mode.
+    # The http2 parameter configures the port to accept HTTP/2 connections.
     listen                  443 ssl http2;
     root                    /usr/share/nginx/html;
 
