--- a/boilerplate/maps/anon_ips.conf
+++ b/boilerplate/maps/anon_ips.conf
@@ -1,3 +1,4 @@
+# map 指令https://openresty.org/download/agentzh-nginx-tutorials-zhcn.html#01-NginxVariables04
 map $remote_addr $ip1 {
     ~(?P<ip>\d+\.\d+\.\d+)\.    $ip;
     ~(?P<ip>[^:]+:[^:]+):       $ip;
